# SaaS

./: README.md  pyproject.toml
core/: asgi.py  settings.py  test.html  urls.py  views.py
