[project]
name = "saas"
version = "0.1.0"
description = "SaaS Application using DJango"
authors = [
    {name = "asilbek",email = "englishisakovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
